Remove Site component
