# components/backend/swagger.yml
@@ -11,17 +11,11 @@ schemes:
   - "http"
 
 paths:
-  /sites/{siteId}/pages/:
+  /pages/:
     get:
       tags:
         - "pages"
       operationId: "listPages"
-      parameters:
-        - name: "siteId"
-          in: "path"
-          description: "Site ID"
-          required: true
-          type: "string"
       responses:
         200:
           description: ""
@@ -34,11 +28,6 @@ paths:
         - "pages"
       operationId: "createPage"
       parameters:
-        - name: "siteId"
-          in: "path"
-          description: "Site ID"
-          required: true
-          type: "string"        
         - in: "body"
           name: "body"
           description: ""
@@ -51,17 +40,12 @@ paths:
           schema:
             $ref: "#/definitions/Page"
 
-  /sites/{siteId}/pages/{pageId}:
+  /pages/{pageId}:
     get:
       tags:
         - "pages"
       operationId: "getPage"
       parameters:
-        - name: "siteId"
-          in: "path"
-          description: "Site ID"
-          required: true
-          type: "string"
         - name: "pageId"
           in: "path"
           description: "Page ID"
@@ -72,16 +56,27 @@ paths:
           description: ""
           schema:
             $ref: "#/definitions/Page"
+    put:
+      tags:
+        - "pages"
+      operationId: "createPage"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: ""
+          required: true
+          schema:
+            $ref: "#/definitions/PageInput"
+      responses:
+        200:
+          description: ""
+          schema:
+            $ref: "#/definitions/Page"
     delete:
       tags:
         - "pages"
       operationId: "deletePage"
       parameters:
-        - name: "siteId"
-          in: "path"
-          description: "Site ID"
-          required: true
-          type: "string"
         - name: "pageId"
           in: "path"
           description: "Page ID"
@@ -91,64 +86,34 @@ paths:
         204:
           description: ""
 
-  /sites/:
+  /dataframes/:
     get:
       tags:
-        - "sites"
-      operationId: "listSites"
+        - "dataframes"
+      operationId: "listDataframes"
       responses:
         200:
           description: ""
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Site"
+              $ref: "#/definitions/Dataframe"
     post:
       tags:
-        - "sites"
-      operationId: "createSite"
+        - "dataframes"
+      operationId: "createDataframe"
       parameters:
         - in: "body"
           name: "body"
           description: ""
           required: true
           schema:
-            $ref: "#/definitions/SiteInput"
+            $ref: "#/definitions/Dataframe"
       responses:
         200:
           description: ""
           schema:
-            $ref: "#/definitions/Site"
-
-  /sites/{siteId}:
-    get:
-      tags:
-        - "sites"
-      operationId: "getSite"
-      parameters:
-        - name: "siteId"
-          in: "path"
-          description: "Site ID"
-          required: true
-          type: "string"
-      responses:
-        200:
-          description: ""
-          schema:
-            $ref: "#/definitions/Site"
-    delete:
-      tags:
-        - "sites"
-      operationId: "deleteSite"
-      parameters:
-        - name: "siteId"
-          in: "path"
-          description: "Site ID"
-          required: true
-          type: "string"
-      responses:
-        204:
-          description: ""
+            $ref: "#/definitions/Dataframe"
 
   /dataframes/{dataframeId}:
     get:
@@ -166,7 +131,7 @@ paths:
           description: ""
           schema:
             $ref: "#/definitions/Dataframe"
-    post:
+    put:
       tags:
         - "dataframes"
       operationId: "createDataframe"
@@ -207,7 +172,7 @@ definitions:
         example: "Weekly Report"
       content:
         type: "object" # TBD
-      site_id:
+      dataframe_id:
         type: "string"
 
   PageInput:
@@ -218,36 +183,7 @@ definitions:
         example: "Weekly Report"
       content:
         type: "string"
-
-  Site:
-    type: "object"
-    properties:
-      id:
-        type: "string"
-      name:
-        type: "string"
-        example: "foobar"
-      slug:
-        type: "string"
-        example: "client-abc-weekly-report"
-      default_page_id:
-        type: "string"
-      pages:
-        type: "array"
-        items: {
-            $ref: "#/definitions/Page"
-        }
-
-  SiteInput:
-    type: "object"
-    properties:
-      name:
-        type: "string"
-        example: "foobar"
-      slug:
-        type: "string"
-        example: "client-abc-weekly-report"
-      default_page_id:
+      dataframe_id:
         type: "string"
 
   Dataframe:
